<resources>
    <string name="app_name">GithubAPI Retrofit</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="email">Email</string>
    <string name="repositories">Repositories</string>
    <string name="repository_name">Repository Name</string>
    <string name="repository_descriptions">Repository Descriptions</string>
    <string name="repository_language">Repository Language</string>
</resources>
