<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="4dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_repoName"
            android:textSize="16sp"
            android:text="@string/repository_name"
            android:textColor="@color/green"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_repoDescriptions"
            android:textSize="16sp"
            android:text="@string/repository_descriptions"
            android:textColor="@color/dark_red"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_repoLanguage"
            android:textSize="16sp"
            android:text="@string/repository_language"
            android:textColor="@color/dark_blue"/>

    </LinearLayout>

</android.support.v7.widget.CardView>